Fix spacing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -162,7 +162,7 @@ section.large {
 .list-of-notes {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
-  gap: 1rem 2rem;
+  gap: 1rem 4rem;
 }
 
 footer {
